# cazio_like_watch

./: CMakeLists.txt  README.md  run.sh
main/: CMakeLists.txt  drawing.c  font.c  i2c_connection.c  main.c  utilitys.c  utilitys.h
